unix/stb_image.h

typedef unsigned char stbi_uc;
typedef unsigned short stbi_us;
STBIDEF stbi_uc *stbi_load(char const *filename, int *x, int *y,
                           int *channels_in_file, int desired_channels);
STBIDEF stbi_us *stbi_load_16(char const *filename, int *x, int *y,
                              int *channels_in_file, int desired_channels);
STBIDEF float *stbi_loadf(char const *filename, int *x, int *y,
                          int *channels_in_file, int desired_channels);
typedef unsigned short stbi__uint16;
typedef uint16_t stbi__uint16;
STBIDEF stbi_uc *stbi_load(char const *filename, int *x, int *y, int *comp,
                           int req_comp) {
  FILE *f = stbi__fopen(filename, "rb");
  unsigned char *result;
  if (!f)
    return stbi__errpuc("can't fopen", "Unable to open file");
  result = stbi_load_from_file(f, x, y, comp, req_comp);
  fclose(f);
  return result;
}
STBIDEF stbi_us *stbi_load_16(char const *filename, int *x, int *y, int *comp,
                              int req_comp) {
  FILE *f = stbi__fopen(filename, "rb");
  stbi__uint16 *result;
  if (!f)
    return (stbi_us *)stbi__errpuc("can't fopen", "Unable to open file");
  result = stbi_load_from_file_16(f, x, y, comp, req_comp);
  fclose(f);
  return result;
}
STBIDEF float *stbi_loadf(char const *filename, int *x, int *y, int *comp,
                          int req_comp) {
  float *result;
  FILE *f = stbi__fopen(filename, "rb");
  if (!f)
    return stbi__errpf("can't fopen", "Unable to open file");
  result = stbi_loadf_from_file(f, x, y, comp, req_comp);
  fclose(f);
  return result;
}